[workspace]
members = [
    "cli",
    "core",
    "parsers/json_schema",
    "parsers/raw_json",
    "parsers/rust_parser/lib",
    "parsers/rust_parser",
    "parsers/rust_parser/annotation",
    "lang_module",
    "lang_module/macros",
    "langs/typescript"
]
resolver = "2"

[workspace.package]
version = "1.8.0"
license = "MIT OR Apache-2.0"
authors = ["Wyatt Jacob Herkamp <wherkamp@gmail.com>", "1Password"]
repository = "https://github.com/wyatt-herkamp/typeshare"
[workspace.dependencies]
serde= { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive", "cargo"]}
clap_complete = { version = "4" }
toml = { version = "0.8"}
rayon = { version = "1"}
thiserror = { version = "1" }
console = "0.15"
joinery = { version = "3" }
lazy_format = { version = "2" }
log = { version = "0.4" }
strum = { version = "0.25", features = ["derive"] }
semver = { version = "1" ,features = ["serde"]}
derive_more = { version = "1.0.0-beta.3", features = ["into","from", "deref", "deref_mut"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.72"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
]

[profile.test]


[profile.release]
lto = 'thin'
opt-level = 2
debug-assertions = false
codegen-units = 16
incremental = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
