[workspace]
members = ["annotation", "cli", "core", "lib"]
resolver = "2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-unknown-linux-gnu",
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]

[profile.test]


[profile.release]
lto = 'thin'
opt-level = 2
debug-assertions = false
codegen-units = 16
incremental = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[workspace.dependencies]
log = "0.4"
flexi_logger = "0.31"
