[package]
name = "typeshare-annotation"
version = "1.0.2"
rust-version = "1.57"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The annotation used to mark types for typeshare"
repository = "https://github.com/1Password/typeshare"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["parsing", "proc-macro"] }
quote = "1.0"
