[package]
name = "typeshare-builtin-languages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
itertools = "0.11"
lazy_format = "2.0.0"
joinery = "3.1"
serde = "1"
typeshare-core = {path = "../core"}