[package]
name = "typeshare-cli"
version = "1.10.0-beta.7"
edition = "2021"
description = "Command Line Tool for generating language files with typeshare"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1Password/typeshare"
readme = "README.md"

[[bin]]
name = "typeshare"
path = "src/main.rs"

[features]
go = []

[dependencies]
clap = { version = "3", features = ["cargo"] }
clap_complete_command = "0.3"
ignore = "0.4"
once_cell = "1"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
typeshare-core = { path = "../core", version = "1.10.0-beta.7" }
anyhow = "1"
