[package]
name = "typeshare-cli"
version = "1.13.3"
edition = "2021"
description = "Command Line Tool for generating language files with typeshare"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1Password/typeshare"
readme = "README.md"

[[bin]]
name = "typeshare"
path = "src/main.rs"

[features]
go = []
python = []

[dependencies]
clap = { version = "4.5", features = [
    "cargo",
    "derive",
    "unicode",
    "wrap_help",
] }
ignore = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
typeshare-core = { path = "../core", version = "=1.13.3" }
log.workspace = true
flexi_logger.workspace = true
anyhow = "1"
clap_complete = "4.5"
crossbeam = "0.8"
