[package]
name = "typeshare-core"
version = "1.13.2"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "The code generator used by Typeshare's command line tool"
repository = "https://github.com/1Password/typeshare"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit"] }
thiserror = "1"
itertools = "0.12"
lazy_format = "2"
joinery = "2"
log.workspace = true
flexi_logger.workspace = true

[dev-dependencies]
expect-test = "1.5"
once_cell = "1"
cool_asserts = "2"
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
anyhow = "1"
