[package]
name = "typeshare-core"
version = "1.13.3"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "The code generator used by Typeshare's command line tool"
repository = "https://github.com/1Password/typeshare"

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["full", "visit"] }
thiserror = "2"
itertools = "0.14"
lazy_format = "2"
joinery = "3.1"
topological-sort = { version = "0.2.2" }
convert_case = { version = "0.8" }
toml = "0.9"
log.workspace = true
flexi_logger.workspace = true

[dev-dependencies]
expect-test = "1.5"
once_cell = "1"
cool_asserts = "2"
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
anyhow = "1"
