[package]
name = "typeshare-module"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = {workspace=true}
log = {workspace=true}
toml = { workspace=true }
rayon = { workspace=true}
simple-log = { version = "1" }
console = { workspace=true }
strum = {workspace=true}
typeshare-core = { path = "../core" }
semver = {workspace=true}
typeshare-lang-module-macros = { path = "./macros", optional = true }
bincode = { version = "2.0.0-rc.3" ,features = ["serde"]}
libloading = { version = "0.8", optional = true }
[build-dependencies]
vergen = { version = "8",features = ["build","rustc"] }
[features]
default = ["macros", "ffi_v1"]
macros = ["typeshare-lang-module-macros"]
ffi_v1 =[]
