[package]
name = "typeshare-snapshot-test"
version = "1.0.0"
edition = "2024"

description = "utility for snapshot testing your typeshare implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1Password/typeshare"
readme = "README.md"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive", "unicode", "wrap_help"] }
indent_write = "2.2.0"
lazy_format = "2.0.3"
similar = { version = "2.7.0", features = ["bytes"], default-features = false }
