[package]
name = "typeshare2-cli"
version = "2.0.0"
edition = "2021"

[dependencies]
typeshare-typescript = { path = "../langs/typescript" }
typeshare-kotlin = { path = "../langs/kotlin" }
typeshare-swift = { path = "../langs/swift" }
typeshare-driver = { path = "../driver" }

[[bin]]
name = "typeshare2"
path = "src/main.rs"
