[package]
name = "typeshare-driver"
version = "1.1.1"
edition = "2021"

description = "macro for trivially creating your own typeshare binaries"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1Password/typeshare"
readme = "README.md"

[dependencies]
anyhow = "1.0.96"

typeshare-engine = { version = "0.2.1", path = "../engine" }
