[package]
name = "typeshare-driver"
version = "1.3.0"
edition = "2021"

description = "macro for trivially creating your own typeshare binaries"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1Password/typeshare"
readme = "README.md"

[dependencies]
anyhow.workspace = true
log.workspace = true

typeshare-engine = { version = "0.4.0", path = "../engine" }
