[package]
name = "typeshare-engine"
version = "0.2.2"
edition = "2021"

description = "Behavioral engine for typeshare: parsing, writing, configuration, and everything in between."
license = "MIT OR Apache-2.0"
repository = "https://github.com/1Password/typeshare"
readme = "README.md"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5", features = ["std", "derive", "string"] }
clap_complete = "4.5.32"
ignore = "0.4.23"
indent_write = "2.2.0"
itertools = { version = "0.14.0", default-features = false }
proc-macro2 = { version = "1.0.94", default-features = false, features = [
    "span-locations",
] }
lazy_format = "2"
quote = { version = "1.0.38", default-features = false }
rayon = "1.10.0"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
syn = { version = "2.0.96", features = [
    "full",
    "visit",
    "printing",
    "parsing",
] }
thiserror = "2.0.11"
toml = "0.8.19"
typeshare-model = { path = "../model", version = "1.1" }

[dev-dependencies]
cool_asserts = "2.0.3"
itertools = "0.14.0"
