[package]
name = "typeshare-model"
version = "2.0.1"
edition = "2024"

description = "core definition of the typeshare Language trait for implementations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1Password/typeshare"
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.95", default-features = false }
itertools = "0.14.0"
serde = { version = "1.0.217", default-features = false }
