[package]
name = "typeshare-rust-parser"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typeshare-core = { path = "../../core" }
thiserror = {workspace = true}
proc-macro2 = { version = "1" }
syn = { version = "2", features = ["full","extra-traits"] }
toml = {version = "0.8"}
derive_more = { workspace=true }
quote = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }