[package]
name = "typeshare-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
typeshare-engine = { path = "../typeshare-engine" }
typeshare-typescript = { path = "../langs/typescript" }
typeshare-driver = { path = "../typeshare-driver" }
typeshare-model = { path = "../typeshare-model" }

ignore = "0.4.23"
clap = "4.5.28"
anyhow = "1.0.96"
