[package]
name = "typeshare-kotlin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
indent_write = "2.2.0"
itertools = { version = "0.14.0", default-features = false }
joinery = "3.1.0"
lazy_format = "2.0.3"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.10"
typeshare-model = { path = "../../model" }
