[package]
name = "typeshare-swift"
version = "1.13.2"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
indent_write = "2.2.0"
itertools = { version = "0.14.0" }
joinery = "3.1.0"
lazy_format = "2.0.3"
serde = { version = "1.0.219", features = ["derive"] }
typeshare-model = { path = "../../model" }
